--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   salomon_bottom_bar:
   shared_preferences:
   intl:
+  lottie:
+  get_storage:
 
 dev_dependencies:
   flutter_test:
