--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   async:
   image_picker:
   rxdart:
+  custom_refresh_indicator:
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/
-
+    - asset/plane_indicator/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
