--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   flutter_chat_bubble:
   particles_flutter:
   open_file:
+  ios_search_appbar:
+  flutter_webrtc:
+  agora_rtc_engine: ^6.3.0
   permission_handler:
 
 dev_dependencies:
@@ -68,7 +71,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
